Format XAML using XamlStyler

--- a/BlockPatternAnimation/App.axaml
+++ b/BlockPatternAnimation/App.axaml
@@ -1,5 +1,4 @@
-<Application
-    x:Class="BlockPatternAnimation.App"
+<Application x:Class="BlockPatternAnimation.App"
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:BlockPatternAnimation"
