--- a/TextOutlineAnimation/App.axaml
+++ b/TextOutlineAnimation/App.axaml
@@ -1,5 +1,4 @@
-<Application
-    x:Class="TextOutlineAnimation.App"
+<Application x:Class="TextOutlineAnimation.App"
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:TextOutlineAnimation"
