--- a/NoSchemaCsv.Immutable/App.axaml
+++ b/NoSchemaCsv.Immutable/App.axaml
@@ -1,5 +1,4 @@
-<Application
-    x:Class="NoSchemaCsv.Immutable.App"
+<Application x:Class="NoSchemaCsv.Immutable.App"
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:NoSchemaCsv.Immutable"
