--- a/RealTimeBitmapAdapter/App.axaml
+++ b/RealTimeBitmapAdapter/App.axaml
@@ -1,5 +1,4 @@
-<Application
-    x:Class="RealTimeBitmapAdapter.App"
+<Application x:Class="RealTimeBitmapAdapter.App"
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:RealTimeBitmapAdapter"
