--- a/SkiaBitmapAdapter/Views/SkiaBitmapView.axaml
+++ b/SkiaBitmapAdapter/Views/SkiaBitmapView.axaml
@@ -1,5 +1,4 @@
-<UserControl
-    x:Class="SkiaBitmapAdapter.Views.SkiaBitmapView"
+<UserControl x:Class="SkiaBitmapAdapter.Views.SkiaBitmapView"
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
