--- a/TextOutlineAnimation/Views/MainWindow.axaml
+++ b/TextOutlineAnimation/Views/MainWindow.axaml
@@ -1,5 +1,4 @@
-<Window
-    x:Class="TextOutlineAnimation.Views.MainWindow"
+<Window x:Class="TextOutlineAnimation.Views.MainWindow"
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:c="using:TextOutlineAnimation.Controls"
@@ -79,19 +78,12 @@
         <StackPanel Orientation="Horizontal" Spacing="8">
             <CheckBox Content="Transparent Foreground" IsChecked="{Binding UseTransparentForeground}" />
             <CheckBox Content="Animate Stroke" IsChecked="{Binding UseStrokeAnimation}" />
-            <NumericUpDown
-                x:Name="sizeControl"
-                ButtonSpinnerLocation="Right"
-                Increment="2"
-                Minimum="8"
-                Value="96" />
+            <NumericUpDown x:Name="sizeControl" ButtonSpinnerLocation="Right" Increment="2" Minimum="8" Value="96" />
         </StackPanel>
         <ScrollViewer Grid.Row="1">
-            <c:OutlinedText
-                Classes.animate="{Binding UseStrokeAnimation}"
+            <c:OutlinedText Classes.animate="{Binding UseStrokeAnimation}"
                 Classes.transparent="{Binding UseTransparentForeground}"
-                FontSize="{Binding Value, ElementName=sizeControl}"
-                Text="{Binding SampleText}" />
+                FontSize="{Binding Value, ElementName=sizeControl}" Text="{Binding SampleText}" />
         </ScrollViewer>
     </Grid>
 </Window>
