--- a/TextHighlighting/App.axaml
+++ b/TextHighlighting/App.axaml
@@ -1,7 +1,7 @@
 <Application x:Class="TextHighlighting.App"
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    RequestedThemeVariant="Light">
+    RequestedThemeVariant="Default">
     <Application.Styles>
         <FluentTheme />
     </Application.Styles>
